force-app/main/default/objects/SSO_Redirection__mdt/SSO_Redirection__mdt.object-meta.xml
<CustomObject>
    <description>Metadata Object to store SSO redirection URL</description>
    <label>SSO Redirection</label>
    <pluralLabel>SSO Redirections</pluralLabel>
</CustomObject>