force-app/main/default/objects/SSO_Redirection__mdt/fields/Activated__c.field-meta.xml
<CustomField>
    <fullName>Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to Enable or disable the switch</description>
    <label>Activated</label>
    <type>Checkbox</type>
</CustomField>