force-app/main/default/objects/SSO_Redirection__mdt/fields/Expiry_Time_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Time_In_Minutes__c</fullName>
    <description>Duration to capture expiry time of the URL</description>
    <label>Expiry Time (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>