force-app/main/default/objects/SSO_Redirection__mdt/fields/SSO_URL__c.field-meta.xml
<CustomField>
    <fullName>SSO_URL__c</fullName>
    <description>SSO URL for the Service</description>
    <label>SSO URL</label>
    <type>Url</type>
</CustomField>